--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/work
-spring.datasource.name=root
+spring.datasource.url=jdbc:mysql://localhost:3306/work?createDatabaseIfNotExist=true
+spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+hibernate.hbm2ddl.auto=create
 #db.entity.package=crud.model
