--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/work?createDatabaseIfNotExist=
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-hibernate.hbm2ddl.auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 #db.entity.package=crud.model
+#hibernate.hbm2ddl.auto=create
